--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.0.0",
     "@tiptap/extension-bold": "^2.11.4",
+    "@tiptap/extension-code": "^2.11.5",
     "@tiptap/extension-placeholder": "^2.11.5",
     "@tiptap/extension-table": "^2.11.3",
     "@tiptap/extension-table-cell": "^2.11.3",
