--- a/package.json
+++ b/package.json
@@ -13,18 +13,24 @@
     "@tailwindcss/vite": "^4.0.0",
     "@tiptap/extension-bold": "^2.11.4",
     "@tiptap/extension-code": "^2.11.5",
+    "@tiptap/extension-document": "^2.11.5",
+    "@tiptap/extension-paragraph": "^2.11.5",
     "@tiptap/extension-placeholder": "^2.11.5",
+    "@tiptap/extension-strike": "^2.11.5",
     "@tiptap/extension-table": "^2.11.3",
     "@tiptap/extension-table-cell": "^2.11.3",
     "@tiptap/extension-table-header": "^2.11.3",
     "@tiptap/extension-table-row": "^2.11.3",
+    "@tiptap/extension-text": "^2.11.5",
     "@tiptap/extension-text-align": "^2.11.4",
     "@tiptap/extension-underline": "^2.11.3",
     "@tiptap/pm": "^2.11.3",
     "@tiptap/react": "^2.11.3",
     "@tiptap/starter-kit": "^2.11.3",
+    "prosemirror-state": "^1.4.3",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "tiptap-markdown": "^0.8.10"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
